# EcoSim-CPP

./: CMakeLists.txt  README.md
EcoSimCMAKE/: CMakeLists.txt  Depot.cpp  Depot.h  EcoSimCMAKE.cpp  EcoSimCMAKE.h  Needs.cpp  Needs.h  Order.cpp  Order.h  Pop.cpp  Pop.h  Prices.cpp  Prices.h  Simulation.cpp  Simulation.h
dataout/: popInfo.csv
